--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important; /* background override */
+  -webkit-text-fill-color: rgb(0, 0, 0) !important;               /* text color */
+  caret-color: rgb(0, 0, 0) !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+
 
 body {
   margin: 0;
